Avoid jumping scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
+html { margin-left: calc(100vw - 100%); }
 body {
     background-color: #f7f7f7;
     font-family: Ubuntu, Arial, sans-serif;
-    color: #363545 
+    color: #363545;
 }
 .container {
     display: flex;
@@ -11,7 +12,7 @@ body {
 }
 .content {
     text-align: left;
-    width: 500px;
+    width: 550px;
 }
 #profileimg {
     display: block;
